# BLE-Bike-ERG

./: .gitignore  BLUETOOTH-Services-GATT.md  Bluetooth Research.md  CMakeLists.txt  README.md  Workouts.md  build.sh  build_mac.sh  config_ios.sh  config_mac.sh
src/: CMakeLists.txt  bluetooth-controller.cpp  bluetooth-controller.hpp  bluetooth-utils.cpp  bluetooth-utils.hpp  config.hpp  font-settings.cpp  font-settings.hpp  main-menu.cpp  main-menu.hpp  main.c  main.cpp  main.h  scene-manager.cpp  scene-manager.hpp  scene.hpp  settings-menu.cpp  settings-menu.hpp  user-data.cpp  user-data.hpp  video-settings.cpp  video-settings.hpp  workout-definition.cpp  workout-definition.hpp  workout-scene.cpp  workout-scene.hpp  workout-selection-scene.cpp  workout-selection-scene.hpp
src/MattsUtils/: bounds.cpp  bounds.hpp  ferrersBoard.cpp  ferrersBoard.hpp  number.cpp  number.hpp  parsing.cpp  parsing.hpp  partition_check.cpp  partition_check.hpp  raylib-structs.cpp  raylib-structs.hpp  relative-drawing.cpp  relative-drawing.hpp  string-func.cpp  string-func.hpp  time.cpp  time.hpp
src/fit-file/: encode.cpp  encode.hpp
src/resources/workouts/: 2x20_FTP_Intervals.workout  High_Intensity_Recovery.workout  Manifest.txt  Mat_Hayman_Paris_Roubaix_1.workout  Sweet_Sopt.workout  ramp.workout  test.workout
