
cmake_minimum_required (VERSION 3.21)
project (BLE_Bike_ERG)

set(CMAKE_C_STANDARD 11) # Requires C11 standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS  "-D_SILENCE_STDEXT_ARR_ITERS_DEPRECATION_WARNING")

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/SimpleBLE/simpleble ${CMAKE_BINARY_DIR}/simpleble)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib/raylib ${CMAKE_BINARY_DIR}/raylib)

include_directories(${CMAKE_CURRENT_LIST_DIR}/include)

# Main Program
set(MAIN_SRC 
    src/main.cpp
    src/config.hpp
    src/font-settings.cpp
    src/font-settings.hpp
    src/video-settings.cpp
    src/video-settings.hpp
    src/bluetooth-controller.cpp
    src/bluetooth-controller.hpp
    src/bluetooth-utils.cpp
    src/bluetooth-utils.hpp
    src/scene.cpp
    src/scene.hpp
    src/scene-manager.cpp
    src/scene-manager.hpp
    src/main-menu.cpp
    src/main-menu.hpp
    src/settings-menu.cpp
    src/settings-menu.hpp
    src/workout-scene.cpp
    src/workout-scene.hpp
    src/workout-selection-scene.cpp
    src/workout-selection-scene.hpp
    src/workout-definition.cpp
    src/workout-definition.hpp
    src/user-data.cpp
    src/user-data.hpp

    src/fit-file/encode.cpp
    src/fit-file/encode.hpp
    src/fit-file/fit.cpp
    src/fit-file/fit.hpp
    src/fit-file/fit_aad_accel_features_mesg.hpp
    src/fit-file/fit_aad_accel_features_mesg_listener.hpp
    src/fit-file/fit_accelerometer_data_mesg.hpp
    src/fit-file/fit_accelerometer_data_mesg_listener.hpp
    src/fit-file/fit_accumulated_field.cpp
    src/fit-file/fit_accumulated_field.hpp
    src/fit-file/fit_accumulator.cpp
    src/fit-file/fit_accumulator.hpp
    src/fit-file/fit_activity_mesg.hpp
    src/fit-file/fit_activity_mesg_listener.hpp
    src/fit-file/fit_ant_channel_id_mesg.hpp
    src/fit-file/fit_ant_channel_id_mesg_listener.hpp
    src/fit-file/fit_ant_rx_mesg.hpp
    src/fit-file/fit_ant_rx_mesg_listener.hpp
    src/fit-file/fit_ant_tx_mesg.hpp
    src/fit-file/fit_ant_tx_mesg_listener.hpp
    src/fit-file/fit_aviation_attitude_mesg.hpp
    src/fit-file/fit_aviation_attitude_mesg_listener.hpp
    src/fit-file/fit_barometer_data_mesg.hpp
    src/fit-file/fit_barometer_data_mesg_listener.hpp
    src/fit-file/fit_beat_intervals_mesg.hpp
    src/fit-file/fit_beat_intervals_mesg_listener.hpp
    src/fit-file/fit_bike_profile_mesg.hpp
    src/fit-file/fit_bike_profile_mesg_listener.hpp
    src/fit-file/fit_blood_pressure_mesg.hpp
    src/fit-file/fit_blood_pressure_mesg_listener.hpp
    src/fit-file/fit_buffer_encode.cpp
    src/fit-file/fit_buffer_encode.hpp
    src/fit-file/fit_buffered_mesg_broadcaster.cpp
    src/fit-file/fit_buffered_mesg_broadcaster.hpp
    src/fit-file/fit_buffered_record_mesg.hpp
    src/fit-file/fit_buffered_record_mesg_broadcaster.cpp
    src/fit-file/fit_buffered_record_mesg_broadcaster.hpp
    src/fit-file/fit_buffered_record_mesg_listener.hpp
    src/fit-file/fit_cadence_zone_mesg.hpp
    src/fit-file/fit_cadence_zone_mesg_listener.hpp
    src/fit-file/fit_camera_event_mesg.hpp
    src/fit-file/fit_camera_event_mesg_listener.hpp
    src/fit-file/fit_capabilities_mesg.hpp
    src/fit-file/fit_capabilities_mesg_listener.hpp
    src/fit-file/fit_chrono_shot_data_mesg.hpp
    src/fit-file/fit_chrono_shot_data_mesg_listener.hpp
    src/fit-file/fit_chrono_shot_session_mesg.hpp
    src/fit-file/fit_chrono_shot_session_mesg_listener.hpp
    src/fit-file/fit_climb_pro_mesg.hpp
    src/fit-file/fit_climb_pro_mesg_listener.hpp
    src/fit-file/fit_config.hpp
    src/fit-file/fit_connectivity_mesg.hpp
    src/fit-file/fit_connectivity_mesg_listener.hpp
    src/fit-file/fit_course_mesg.hpp
    src/fit-file/fit_course_mesg_listener.hpp
    src/fit-file/fit_course_point_mesg.hpp
    src/fit-file/fit_course_point_mesg_listener.hpp
    src/fit-file/fit_crc.cpp
    src/fit-file/fit_crc.hpp
    src/fit-file/fit_date_time.cpp
    src/fit-file/fit_date_time.hpp
    src/fit-file/fit_decode.cpp
    src/fit-file/fit_decode.hpp
    src/fit-file/fit_developer_data_id_mesg.hpp
    src/fit-file/fit_developer_data_id_mesg_listener.hpp
    src/fit-file/fit_developer_field.cpp
    src/fit-file/fit_developer_field.hpp
    src/fit-file/fit_developer_field_definition.cpp
    src/fit-file/fit_developer_field_definition.hpp
    src/fit-file/fit_developer_field_description.cpp
    src/fit-file/fit_developer_field_description.hpp
    src/fit-file/fit_developer_field_description_listener.hpp
    src/fit-file/fit_device_aux_battery_info_mesg.hpp
    src/fit-file/fit_device_aux_battery_info_mesg_listener.hpp
    src/fit-file/fit_device_info_mesg.hpp
    src/fit-file/fit_device_info_mesg_listener.hpp
    src/fit-file/fit_device_settings_mesg.hpp
    src/fit-file/fit_device_settings_mesg_listener.hpp
    src/fit-file/fit_dive_alarm_mesg.hpp
    src/fit-file/fit_dive_alarm_mesg_listener.hpp
    src/fit-file/fit_dive_apnea_alarm_mesg.hpp
    src/fit-file/fit_dive_apnea_alarm_mesg_listener.hpp
    src/fit-file/fit_dive_gas_mesg.hpp
    src/fit-file/fit_dive_gas_mesg_listener.hpp
    src/fit-file/fit_dive_settings_mesg.hpp
    src/fit-file/fit_dive_settings_mesg_listener.hpp
    src/fit-file/fit_dive_summary_mesg.hpp
    src/fit-file/fit_dive_summary_mesg_listener.hpp
    src/fit-file/fit_encode.cpp
    src/fit-file/fit_encode.hpp
    src/fit-file/fit_event_mesg.hpp
    src/fit-file/fit_event_mesg_listener.hpp
    src/fit-file/fit_exd_data_concept_configuration_mesg.hpp
    src/fit-file/fit_exd_data_concept_configuration_mesg_listener.hpp
    src/fit-file/fit_exd_data_field_configuration_mesg.hpp
    src/fit-file/fit_exd_data_field_configuration_mesg_listener.hpp
    src/fit-file/fit_exd_screen_configuration_mesg.hpp
    src/fit-file/fit_exd_screen_configuration_mesg_listener.hpp
    src/fit-file/fit_exercise_title_mesg.hpp
    src/fit-file/fit_exercise_title_mesg_listener.hpp
    src/fit-file/fit_factory.cpp
    src/fit-file/fit_factory.hpp
    src/fit-file/fit_field.cpp
    src/fit-file/fit_field.hpp
    src/fit-file/fit_field_base.cpp
    src/fit-file/fit_field_base.hpp
    src/fit-file/fit_field_capabilities_mesg.hpp
    src/fit-file/fit_field_capabilities_mesg_listener.hpp
    src/fit-file/fit_field_definition.cpp
    src/fit-file/fit_field_definition.hpp
    src/fit-file/fit_field_description_mesg.hpp
    src/fit-file/fit_field_description_mesg_listener.hpp
    src/fit-file/fit_file_capabilities_mesg.hpp
    src/fit-file/fit_file_capabilities_mesg_listener.hpp
    src/fit-file/fit_file_creator_mesg.hpp
    src/fit-file/fit_file_creator_mesg_listener.hpp
    src/fit-file/fit_file_id_mesg.hpp
    src/fit-file/fit_file_id_mesg_listener.hpp
    src/fit-file/fit_goal_mesg.hpp
    src/fit-file/fit_goal_mesg_listener.hpp
    src/fit-file/fit_gps_metadata_mesg.hpp
    src/fit-file/fit_gps_metadata_mesg_listener.hpp
    src/fit-file/fit_gyroscope_data_mesg.hpp
    src/fit-file/fit_gyroscope_data_mesg_listener.hpp
    src/fit-file/fit_hr_mesg.hpp
    src/fit-file/fit_hr_mesg_listener.hpp
    src/fit-file/fit_hr_zone_mesg.hpp
    src/fit-file/fit_hr_zone_mesg_listener.hpp
    src/fit-file/fit_hrm_profile_mesg.hpp
    src/fit-file/fit_hrm_profile_mesg_listener.hpp
    src/fit-file/fit_hrv_mesg.hpp
    src/fit-file/fit_hrv_mesg_listener.hpp
    src/fit-file/fit_hrv_status_summary_mesg.hpp
    src/fit-file/fit_hrv_status_summary_mesg_listener.hpp
    src/fit-file/fit_hrv_value_mesg.hpp
    src/fit-file/fit_hrv_value_mesg_listener.hpp
    src/fit-file/fit_hsa_accelerometer_data_mesg.hpp
    src/fit-file/fit_hsa_accelerometer_data_mesg_listener.hpp
    src/fit-file/fit_hsa_body_battery_data_mesg.hpp
    src/fit-file/fit_hsa_body_battery_data_mesg_listener.hpp
    src/fit-file/fit_hsa_configuration_data_mesg.hpp
    src/fit-file/fit_hsa_configuration_data_mesg_listener.hpp
    src/fit-file/fit_hsa_event_mesg.hpp
    src/fit-file/fit_hsa_event_mesg_listener.hpp
    src/fit-file/fit_hsa_gyroscope_data_mesg.hpp
    src/fit-file/fit_hsa_gyroscope_data_mesg_listener.hpp
    src/fit-file/fit_hsa_heart_rate_data_mesg.hpp
    src/fit-file/fit_hsa_heart_rate_data_mesg_listener.hpp
    src/fit-file/fit_hsa_respiration_data_mesg.hpp
    src/fit-file/fit_hsa_respiration_data_mesg_listener.hpp
    src/fit-file/fit_hsa_spo2_data_mesg.hpp
    src/fit-file/fit_hsa_spo2_data_mesg_listener.hpp
    src/fit-file/fit_hsa_step_data_mesg.hpp
    src/fit-file/fit_hsa_step_data_mesg_listener.hpp
    src/fit-file/fit_hsa_stress_data_mesg.hpp
    src/fit-file/fit_hsa_stress_data_mesg_listener.hpp
    src/fit-file/fit_hsa_wrist_temperature_data_mesg.hpp
    src/fit-file/fit_hsa_wrist_temperature_data_mesg_listener.hpp
    src/fit-file/fit_jump_mesg.hpp
    src/fit-file/fit_jump_mesg_listener.hpp
    src/fit-file/fit_lap_mesg.hpp
    src/fit-file/fit_lap_mesg_listener.hpp
    src/fit-file/fit_length_mesg.hpp
    src/fit-file/fit_length_mesg_listener.hpp
    src/fit-file/fit_magnetometer_data_mesg.hpp
    src/fit-file/fit_magnetometer_data_mesg_listener.hpp
    src/fit-file/fit_max_met_data_mesg.hpp
    src/fit-file/fit_max_met_data_mesg_listener.hpp
    src/fit-file/fit_memo_glob_mesg.hpp
    src/fit-file/fit_memo_glob_mesg_listener.hpp
    src/fit-file/fit_mesg.cpp
    src/fit-file/fit_mesg.hpp
    src/fit-file/fit_mesg_broadcast_plugin.hpp
    src/fit-file/fit_mesg_broadcaster.cpp
    src/fit-file/fit_mesg_broadcaster.hpp
    src/fit-file/fit_mesg_capabilities_mesg.hpp
    src/fit-file/fit_mesg_capabilities_mesg_listener.hpp
    src/fit-file/fit_mesg_definition.cpp
    src/fit-file/fit_mesg_definition.hpp
    src/fit-file/fit_mesg_definition_listener.hpp
    src/fit-file/fit_mesg_listener.hpp
    src/fit-file/fit_mesg_with_event.hpp
    src/fit-file/fit_mesg_with_event_broadcaster.cpp
    src/fit-file/fit_mesg_with_event_broadcaster.hpp
    src/fit-file/fit_mesg_with_event_listener.hpp
    src/fit-file/fit_met_zone_mesg.hpp
    src/fit-file/fit_met_zone_mesg_listener.hpp
    src/fit-file/fit_monitoring_hr_data_mesg.hpp
    src/fit-file/fit_monitoring_hr_data_mesg_listener.hpp
    src/fit-file/fit_monitoring_info_mesg.hpp
    src/fit-file/fit_monitoring_info_mesg_listener.hpp
    src/fit-file/fit_monitoring_mesg.hpp
    src/fit-file/fit_monitoring_mesg_listener.hpp
    src/fit-file/fit_nmea_sentence_mesg.hpp
    src/fit-file/fit_nmea_sentence_mesg_listener.hpp
    src/fit-file/fit_obdii_data_mesg.hpp
    src/fit-file/fit_obdii_data_mesg_listener.hpp
    src/fit-file/fit_ohr_settings_mesg.hpp
    src/fit-file/fit_ohr_settings_mesg_listener.hpp
    src/fit-file/fit_one_d_sensor_calibration_mesg.hpp
    src/fit-file/fit_one_d_sensor_calibration_mesg_listener.hpp
    src/fit-file/fit_pad_mesg.hpp
    src/fit-file/fit_pad_mesg_listener.hpp
    src/fit-file/fit_power_zone_mesg.hpp
    src/fit-file/fit_power_zone_mesg_listener.hpp
    src/fit-file/fit_profile.cpp
    src/fit-file/fit_profile.hpp
    src/fit-file/fit_protocol_validator.cpp
    src/fit-file/fit_protocol_validator.hpp
    src/fit-file/fit_raw_bbi_mesg.hpp
    src/fit-file/fit_raw_bbi_mesg_listener.hpp
    src/fit-file/fit_record_mesg.hpp
    src/fit-file/fit_record_mesg_listener.hpp
    src/fit-file/fit_respiration_rate_mesg.hpp
    src/fit-file/fit_respiration_rate_mesg_listener.hpp
    src/fit-file/fit_runtime_exception.hpp
    src/fit-file/fit_schedule_mesg.hpp
    src/fit-file/fit_schedule_mesg_listener.hpp
    src/fit-file/fit_sdm_profile_mesg.hpp
    src/fit-file/fit_sdm_profile_mesg_listener.hpp
    src/fit-file/fit_segment_file_mesg.hpp
    src/fit-file/fit_segment_file_mesg_listener.hpp
    src/fit-file/fit_segment_id_mesg.hpp
    src/fit-file/fit_segment_id_mesg_listener.hpp
    src/fit-file/fit_segment_lap_mesg.hpp
    src/fit-file/fit_segment_lap_mesg_listener.hpp
    src/fit-file/fit_segment_leaderboard_entry_mesg.hpp
    src/fit-file/fit_segment_leaderboard_entry_mesg_listener.hpp
    src/fit-file/fit_segment_point_mesg.hpp
    src/fit-file/fit_segment_point_mesg_listener.hpp
    src/fit-file/fit_session_mesg.hpp
    src/fit-file/fit_session_mesg_listener.hpp
    src/fit-file/fit_set_mesg.hpp
    src/fit-file/fit_set_mesg_listener.hpp
    src/fit-file/fit_skin_temp_overnight_mesg.hpp
    src/fit-file/fit_skin_temp_overnight_mesg_listener.hpp
    src/fit-file/fit_slave_device_mesg.hpp
    src/fit-file/fit_slave_device_mesg_listener.hpp
    src/fit-file/fit_sleep_assessment_mesg.hpp
    src/fit-file/fit_sleep_assessment_mesg_listener.hpp
    src/fit-file/fit_sleep_level_mesg.hpp
    src/fit-file/fit_sleep_level_mesg_listener.hpp
    src/fit-file/fit_software_mesg.hpp
    src/fit-file/fit_software_mesg_listener.hpp
    src/fit-file/fit_speed_zone_mesg.hpp
    src/fit-file/fit_speed_zone_mesg_listener.hpp
    src/fit-file/fit_split_mesg.hpp
    src/fit-file/fit_split_mesg_listener.hpp
    src/fit-file/fit_split_summary_mesg.hpp
    src/fit-file/fit_split_summary_mesg_listener.hpp
    src/fit-file/fit_spo2_data_mesg.hpp
    src/fit-file/fit_spo2_data_mesg_listener.hpp
    src/fit-file/fit_sport_mesg.hpp
    src/fit-file/fit_sport_mesg_listener.hpp
    src/fit-file/fit_stress_level_mesg.hpp
    src/fit-file/fit_stress_level_mesg_listener.hpp
    src/fit-file/fit_tank_summary_mesg.hpp
    src/fit-file/fit_tank_summary_mesg_listener.hpp
    src/fit-file/fit_tank_update_mesg.hpp
    src/fit-file/fit_tank_update_mesg_listener.hpp
    src/fit-file/fit_three_d_sensor_calibration_mesg.hpp
    src/fit-file/fit_three_d_sensor_calibration_mesg_listener.hpp
    src/fit-file/fit_time_in_zone_mesg.hpp
    src/fit-file/fit_time_in_zone_mesg_listener.hpp
    src/fit-file/fit_timestamp_correlation_mesg.hpp
    src/fit-file/fit_timestamp_correlation_mesg_listener.hpp
    src/fit-file/fit_totals_mesg.hpp
    src/fit-file/fit_totals_mesg_listener.hpp
    src/fit-file/fit_training_file_mesg.hpp
    src/fit-file/fit_training_file_mesg_listener.hpp
    src/fit-file/fit_unicode.cpp
    src/fit-file/fit_unicode.hpp
    src/fit-file/fit_user_profile_mesg.hpp
    src/fit-file/fit_user_profile_mesg_listener.hpp
    src/fit-file/fit_video_clip_mesg.hpp
    src/fit-file/fit_video_clip_mesg_listener.hpp
    src/fit-file/fit_video_description_mesg.hpp
    src/fit-file/fit_video_description_mesg_listener.hpp
    src/fit-file/fit_video_frame_mesg.hpp
    src/fit-file/fit_video_frame_mesg_listener.hpp
    src/fit-file/fit_video_mesg.hpp
    src/fit-file/fit_video_mesg_listener.hpp
    src/fit-file/fit_video_title_mesg.hpp
    src/fit-file/fit_video_title_mesg_listener.hpp
    src/fit-file/fit_watchface_settings_mesg.hpp
    src/fit-file/fit_watchface_settings_mesg_listener.hpp
    src/fit-file/fit_weather_alert_mesg.hpp
    src/fit-file/fit_weather_alert_mesg_listener.hpp
    src/fit-file/fit_weather_conditions_mesg.hpp
    src/fit-file/fit_weather_conditions_mesg_listener.hpp
    src/fit-file/fit_weight_scale_mesg.hpp
    src/fit-file/fit_weight_scale_mesg_listener.hpp
    src/fit-file/fit_workout_mesg.hpp
    src/fit-file/fit_workout_mesg_listener.hpp
    src/fit-file/fit_workout_session_mesg.hpp
    src/fit-file/fit_workout_session_mesg_listener.hpp
    src/fit-file/fit_workout_step_mesg.hpp
    src/fit-file/fit_workout_step_mesg_listener.hpp
    src/fit-file/fit_zones_target_mesg.hpp
    src/fit-file/fit_zones_target_mesg_listener.hpp

    src/MattsUtils/relative-drawing.cpp
    src/MattsUtils/relative-drawing.hpp
    src/MattsUtils/raylib-structs.cpp
    src/MattsUtils/raylib-structs.hpp
    src/MattsUtils/bounds.cpp
    src/MattsUtils/bounds.hpp
    src/MattsUtils/number.cpp
    src/MattsUtils/number.hpp
    src/MattsUtils/time.cpp
    src/MattsUtils/time.hpp
    src/MattsUtils/string-func.cpp
    src/MattsUtils/string-func.hpp
)

add_executable(BLE_BIKE_ERG ${MAIN_SRC})
target_link_libraries(BLE_BIKE_ERG simpleble::simpleble)
target_link_libraries(BLE_BIKE_ERG raylib)
set_target_properties(BLE_BIKE_ERG
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/bin"
)


